@@ -23,13 +23,16 @@ Gem::Specification.new do |s|
   s.rdoc_options = ["--charset=UTF-8"]
   s.extra_rdoc_files = %w[README.textile LICENSE]
 
-  s.add_runtime_dependency('RedCloth', [">= 4.2.1"])
   s.add_runtime_dependency('liquid', [">= 1.9.0"])
   s.add_runtime_dependency('classifier', [">= 1.3.1"])
-  s.add_runtime_dependency('maruku', [">= 0.5.9"])
   s.add_runtime_dependency('directory_watcher', [">= 1.1.1"])
+  s.add_runtime_dependency('maruku', [">= 0.5.9"])
 
-  s.add_development_dependency('DEVDEPNAME', [">= 1.1.0", "< 2.0.0"])
+  s.add_development_dependency('redgreen', [">= 4.2.1"])
+  s.add_development_dependency('shoulda', [">= 4.2.1"])
+  s.add_development_dependency('rr', [">= 4.2.1"])
+  s.add_development_dependency('cucumber', [">= 4.2.1"])
+  s.add_development_dependency('RedCloth', [">= 4.2.1"])
 
   # = MANIFEST =
   s.files = %w[
