@@ -1,0 +1,6 @@
+module Jekyll
+
+  class FatalException < StandardError
+  end
+
+end
