@@ -3,12 +3,18 @@ gem 'RedCloth', '>= 4.2.1'
 
 require File.join(File.dirname(__FILE__), *%w[.. lib jekyll])
 
+require 'RedCloth'
+require 'rdiscount'
+
 require 'test/unit'
 require 'redgreen'
 require 'shoulda'
 require 'rr'
 
 include Jekyll
+
+# Send STDERR into the void to suppress program output messages
+STDERR.reopen(test(?e, '/dev/null') ? '/dev/null' : 'NUL:')
 
 class Test::Unit::TestCase
   include RR::Adapters::TestUnit
